quiche-bindgen/include/quiche.h

    
    typedef int socklen_t;
    typedef int sa_family_t;
    struct sockaddr {
        sa_family_t ss_family;
    };
    struct sockaddr_storage {
        sa_family_t ss_family;
        uint8_t data[64];
    };
    typedef size_t ssize_t;
int quiche_enable_debug_logging(void (*cb)(const char *line, void *argp),
                                void *argp);
typedef struct Conn quiche_conn;
typedef struct StreamIter quiche_stream_iter;
bool quiche_conn_peer_error(const quiche_conn *conn,
                            bool *is_app,
                            uint64_t *error_code,
                            const uint8_t **reason,
                            size_t *reason_len);
bool quiche_conn_local_error(const quiche_conn *conn,
                             bool *is_app,
                             uint64_t *error_code,
                             const uint8_t **reason,
                             size_t *reason_len);
bool quiche_stream_iter_next(quiche_stream_iter *iter, uint64_t *stream_id);
void quiche_stream_iter_free(quiche_stream_iter *iter);
typedef struct Stats {
    size_t recv;
    size_t sent;
    size_t lost;
    size_t retrans;
    uint64_t sent_bytes;
    uint64_t recv_bytes;
    uint64_t acked_bytes;
    uint64_t lost_bytes;
    uint64_t stream_retrans_bytes;
    size_t paths_count;
    uint64_t reset_stream_count_local;
    uint64_t stopped_stream_count_local;
    uint64_t reset_stream_count_remote;
    uint64_t stopped_stream_count_remote;
} quiche_stats;
void quiche_conn_stats(const quiche_conn *conn, quiche_stats *out);
typedef struct TransportParams {
    uint64_t peer_max_idle_timeout;
    uint64_t peer_max_udp_payload_size;
    uint64_t peer_initial_max_data;
    uint64_t peer_initial_max_stream_data_bidi_local;
    uint64_t peer_initial_max_stream_data_bidi_remote;
    uint64_t peer_initial_max_stream_data_uni;
    uint64_t peer_initial_max_streams_bidi;
    uint64_t peer_initial_max_streams_uni;
    uint64_t peer_ack_delay_exponent;
    uint64_t peer_max_ack_delay;
    bool peer_disable_active_migration;
    uint64_t peer_active_conn_id_limit;
    ssize_t peer_max_datagram_frame_size;
} quiche_transport_params;
bool quiche_conn_peer_transport_params(const quiche_conn *conn, quiche_transport_params *out);
typedef struct PathStats {
    struct sockaddr_storage local_addr;
    socklen_t local_addr_len;
    struct sockaddr_storage peer_addr;
    socklen_t peer_addr_len;
    ssize_t validation_state;
    bool active;
    size_t recv;
    size_t sent;
    size_t lost;
    size_t retrans;
    uint64_t rtt;
    size_t cwnd;
    uint64_t sent_bytes;
    uint64_t recv_bytes;
    uint64_t lost_bytes;
    uint64_t stream_retrans_bytes;
    size_t pmtu;
    uint64_t delivery_rate;
} quiche_path_stats;
int quiche_conn_path_stats(const quiche_conn *conn, size_t idx, quiche_path_stats *out);
bool quiche_conn_is_server(const quiche_conn *conn);
ssize_t quiche_conn_dgram_max_writable_len(const quiche_conn *conn);
ssize_t quiche_conn_dgram_recv_front_len(const quiche_conn *conn);
ssize_t quiche_conn_dgram_recv_queue_len(const quiche_conn *conn);
ssize_t quiche_conn_dgram_recv_queue_byte_size(const quiche_conn *conn);
ssize_t quiche_conn_dgram_send_queue_len(const quiche_conn *conn);
ssize_t quiche_conn_dgram_send_queue_byte_size(const quiche_conn *conn);
ssize_t quiche_conn_dgram_recv(quiche_conn *conn, uint8_t *buf,
                               size_t buf_len);
ssize_t quiche_conn_dgram_send(quiche_conn *conn, const uint8_t *buf,
                               size_t buf_len);
void quiche_conn_dgram_purge_outgoing(quiche_conn *conn,
                                      bool (*f)(uint8_t *, size_t));
bool quiche_conn_is_dgram_send_queue_full(const quiche_conn *conn);
bool quiche_conn_is_dgram_recv_queue_full(const quiche_conn *conn);
ssize_t quiche_conn_send_ack_eliciting(quiche_conn *conn);
ssize_t quiche_conn_send_ack_eliciting_on_path(quiche_conn *conn,
                           const struct sockaddr *local, socklen_t local_len,
                           const struct sockaddr *peer, socklen_t peer_len);
bool quiche_conn_retired_scid_next(const quiche_conn *conn, const uint8_t **out, size_t *out_len);
size_t quiche_conn_retired_scids(const quiche_conn *conn);
size_t quiche_conn_available_dcids(const quiche_conn *conn);
size_t quiche_conn_scids_left(quiche_conn *conn);
size_t quiche_conn_active_scids(quiche_conn *conn);
int quiche_conn_new_scid(quiche_conn *conn,
                           const uint8_t *scid, size_t scid_len,
                           const uint8_t *reset_token, bool retire_if_needed, uint64_t *scid_seq);
int quiche_conn_probe_path(quiche_conn *conn,
                                const struct sockaddr *local, socklen_t local_len,
                                const struct sockaddr *peer, socklen_t peer_len, uint64_t *seq);
int quiche_conn_migrate_source(quiche_conn *conn, const struct sockaddr *local, socklen_t local_len, uint64_t *seq);
int quiche_conn_migrate(quiche_conn *conn,
                             const struct sockaddr *local, socklen_t local_len,
                             const struct sockaddr *peer, socklen_t peer_len,
                             uint64_t *seq);
enum quiche_path_event_type {
    QUICHE_PATH_EVENT_NEW,
    QUICHE_PATH_EVENT_VALIDATED,
    QUICHE_PATH_EVENT_FAILED_VALIDATION,
    QUICHE_PATH_EVENT_CLOSED,
    QUICHE_PATH_EVENT_REUSED_SOURCE_CONNECTION_ID,
    QUICHE_PATH_EVENT_PEER_MIGRATED,
};
typedef struct PathEvent quiche_path_event;
const quiche_path_event *quiche_conn_path_event_next(quiche_conn *conn);
enum quiche_path_event_type quiche_path_event_type(quiche_path_event *ev);
void quiche_path_event_new(quiche_path_event *ev,
                           struct sockaddr_storage *local, socklen_t *local_len, struct sockaddr_storage *peer, socklen_t *peer_len);
void quiche_path_event_validated(quiche_path_event *ev,
                           struct sockaddr_storage *local, socklen_t *local_len, struct sockaddr_storage *peer, socklen_t *peer_len);
void quiche_path_event_failed_validation(quiche_path_event *ev,
                           struct sockaddr_storage *local, socklen_t *local_len, struct sockaddr_storage *peer, socklen_t *peer_len);
void quiche_path_event_closed(quiche_path_event *ev,
                           struct sockaddr_storage *local, socklen_t *local_len, struct sockaddr_storage *peer, socklen_t *peer_len);
void quiche_path_event_reused_source_connection_id(quiche_path_event *ev, uint64_t *id,
                           struct sockaddr_storage *old_local, socklen_t *old_local_len,
                           struct sockaddr_storage *old_peer, socklen_t *old_peer_len,
                           struct sockaddr_storage *local, socklen_t *local_len,
                           struct sockaddr_storage *peer, socklen_t *peer_len);
void quiche_path_event_peer_migrated(quiche_path_event *ev,
                           struct sockaddr_storage *local, socklen_t *local_len,
                           struct sockaddr_storage *peer, socklen_t *peer_len);
void quiche_path_event_free(quiche_path_event *ev);
int quiche_conn_retire_dcid(quiche_conn *conn, uint64_t dcid_seq);
typedef struct SocketAddrIter quiche_socket_addr_iter;
quiche_socket_addr_iter *quiche_conn_paths_iter(quiche_conn *conn, const struct sockaddr *from, size_t from_len);
bool quiche_socket_addr_iter_next(quiche_socket_addr_iter *iter, struct sockaddr_storage *peer, size_t *peer_len);
void quiche_socket_addr_iter_free(quiche_socket_addr_iter *iter);
int quiche_conn_is_path_validated(const quiche_conn *conn, const struct sockaddr *from, size_t from_len, const struct sockaddr *to, size_t to_len);
void quiche_conn_free(quiche_conn *conn);
typedef struct H3Conn quiche_h3_conn;
typedef struct H3Event quiche_h3_event;
int quiche_h3_event_for_each_header(quiche_h3_event *ev,
                                    int (*cb)(uint8_t *name, size_t name_len,
                                              uint8_t *value, size_t value_len,
                                              void *argp),
                                    void *argp);
int quiche_h3_for_each_setting(quiche_h3_conn *conn,
                               int (*cb)(uint64_t identifier,
                                         uint64_t value, void *argp),
                               void *argp);
int quiche_h3_take_last_priority_update(quiche_h3_conn *conn,
                                        uint64_t prioritized_element_id,
                                        int (*cb)(uint8_t  *priority_field_value,
                                                  uint64_t priority_field_value_len,
                                                  void *argp),
                                        void *argp);