NativeMethods.g.cs


        [DllImport(__DllName, EntryPoint = "__quiche_conn_peer_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_peer_error(Conn* conn, bool* is_app, ulong* error_code, byte** reason, nuint* reason_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_local_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_local_error(Conn* conn, bool* is_app, ulong* error_code, byte** reason, nuint* reason_len);

        [DllImport(__DllName, EntryPoint = "__quiche_stream_iter_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_stream_iter_next(StreamIter* iter, ulong* stream_id);

        [DllImport(__DllName, EntryPoint = "__quiche_stream_iter_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_stream_iter_free(StreamIter* iter);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stats", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_stats(Conn* conn, Stats* @out);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_peer_transport_params", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_peer_transport_params(Conn* conn, TransportParams* @out);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_path_stats", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_path_stats(Conn* conn, nuint idx, PathStats* @out);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_server", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_server(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_max_writable_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_max_writable_len(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_recv_front_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv_front_len(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_recv_queue_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv_queue_len(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_recv_queue_byte_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv_queue_byte_size(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_send_queue_len", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_send_queue_len(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_send_queue_byte_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_send_queue_byte_size(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_recv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_recv(Conn* conn, byte* buf, nuint buf_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_send", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_dgram_send(Conn* conn, byte* buf, nuint buf_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_dgram_purge_outgoing", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_dgram_purge_outgoing(Conn* conn, delegate* unmanaged[Cdecl]<byte*, nuint, bool> f);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_dgram_send_queue_full", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_dgram_send_queue_full(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_dgram_recv_queue_full", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_dgram_recv_queue_full(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_send_ack_eliciting", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send_ack_eliciting(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_send_ack_eliciting_on_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send_ack_eliciting_on_path(Conn* conn, sockaddr* local, int local_len, sockaddr* peer, int peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_retired_scid_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_retired_scid_next(Conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_retired_scids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_retired_scids(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_available_dcids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_available_dcids(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_scids_left", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_scids_left(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_active_scids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_active_scids(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_new_scid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_new_scid(Conn* conn, byte* scid, nuint scid_len, byte* reset_token, [MarshalAs(UnmanagedType.U1)] bool retire_if_needed, ulong* scid_seq);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_probe_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_probe_path(Conn* conn, sockaddr* local, int local_len, sockaddr* peer, int peer_len, ulong* seq);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_migrate_source", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_migrate_source(Conn* conn, sockaddr* local, int local_len, ulong* seq);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_migrate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_migrate(Conn* conn, sockaddr* local, int local_len, sockaddr* peer, int peer_len, ulong* seq);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_path_event_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern PathEvent* quiche_conn_path_event_next(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_path_event_type(PathEvent* ev);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_new(PathEvent* ev, sockaddr_storage* local, int* local_len, sockaddr_storage* peer, int* peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_validated", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_validated(PathEvent* ev, sockaddr_storage* local, int* local_len, sockaddr_storage* peer, int* peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_failed_validation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_failed_validation(PathEvent* ev, sockaddr_storage* local, int* local_len, sockaddr_storage* peer, int* peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_closed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_closed(PathEvent* ev, sockaddr_storage* local, int* local_len, sockaddr_storage* peer, int* peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_reused_source_connection_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_reused_source_connection_id(PathEvent* ev, ulong* id, sockaddr_storage* old_local, int* old_local_len, sockaddr_storage* old_peer, int* old_peer_len, sockaddr_storage* local, int* local_len, sockaddr_storage* peer, int* peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_peer_migrated", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_peer_migrated(PathEvent* ev, sockaddr_storage* local, int* local_len, sockaddr_storage* peer, int* peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_path_event_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_path_event_free(PathEvent* ev);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_retire_dcid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_retire_dcid(Conn* conn, ulong dcid_seq);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_paths_iter", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SocketAddrIter* quiche_conn_paths_iter(Conn* conn, sockaddr* from, nuint from_len);

        [DllImport(__DllName, EntryPoint = "__quiche_socket_addr_iter_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_socket_addr_iter_next(SocketAddrIter* iter, sockaddr_storage* peer, nuint* peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_socket_addr_iter_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_socket_addr_iter_free(SocketAddrIter* iter);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_path_validated", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_is_path_validated(Conn* conn, sockaddr* from, nuint from_len, sockaddr* to, nuint to_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_free(Conn* conn);
